filename updates, swagger comments added to make api docs clearer
